[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/ui.png" type="Texture" id=1]
[ext_resource path="res://scripts/SmallButton.gd" type="Script" id=2]

[node name="SmallButton" type="Node2D"]
script = ExtResource( 2 )
buttonIcon = 79

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 9.0
margin_bottom = 9.0

[node name="Icon" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
hframes = 6
vframes = 16
frame = 79

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
